--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body data-spy = "scroll" data-target="#main-nav" id="home">
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id = "main-nav">
     <div class="container">
-        <a href="index.html" class="navbar-brand">LoopLAB</a>
+        <a href="/" class="navbar-brand">Buddy Karoon</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target = "#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,79 +27,26 @@
             <a href="#home" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#explore-head-section" class="nav-link">Explore</a>
+            <a href="#explore-head-section" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#create-head-section" class="nav-link">Create</a>
+            <a href="#create-head-section" class="nav-link">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a href="#share-head-section" class="nav-link">Share</a>
+            <a href="#share-head-section" class="nav-link">Links</a>
           </li>
         </ul>
         </div>
     </div>
   </nav>
-  <!--HOME-->
-  <header id = "home-section">
-    <div class="dark-overlay">
-      <div class="home-inner container">
-        
-          <!--Checkpoints-->
-          <div class="row">
-            <div class="col-lg-8 d-none d-lg-block">
-              <h1 class="display-4">Build <strong>Social profiles</strong> and gain revenue <strong>profits</strong></h1>
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p-4 align-self-end">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consectetur a nam placeat odio sequi!
-                </div>
-              </div>
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p-4 align-self-end">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consectetur a nam placeat odio sequi!     </div>
-              </div>
-              <div class="d-flex">
-                <div class="p-4 align-self-start">
-                  <i class="fas fa-check fa-2x"></i>
-                </div>
-                <div class="p-4 align-self-end">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem consectetur a nam placeat odio sequi!  </div>
-              </div>
-            </div>
-          <!--Log in Form--> 
-            <div class="col-lg-4   d-lg-block card bg-primary text-center card-form">
-              <div class="card-body">
-                <h3>Sign up Today</h3>
-                <p>Please Fill out this form to register</p>
-                <form> 
-                  <div class="form-group">
-                  <input type="text" class="form-control form-control-lg mb-5" placeholder="Username">
-                  <input type="text" class="form-control form-control-lg mb-5" placeholder="Email">
-                  <input type="text" class="form-control form-control-lg mb-4" placeholder="Password">
-                  <input type="submit" value="Submit" class="btn btn-outline-light btn-block">
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-          </div>
-
-      </div>
-    </div>
-  </header>
-
+ 
   <!--Explore Head-->
   <section id="explore-head-section">
     <div class="container">
       <div class="row">
-        <div class="col text-center py-5">
-          <h1 class="display-4">Explore</h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet nostrum illum amet maxime id expedita neque velit laboriosam praesentium alias.</p>
+        <div class="col text-center py-5 my-5">
+          <h1 class="display-4">Hello! I am Buddy.</h1>
+          <p class="lead">I build applications.</p>
           <a href="" class="btn btn-outline-secondary">Find out more</a>
         </div>
       </div>
@@ -110,15 +57,17 @@
   <section id="explore-section" class = "bg-light text-muted py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <img src="img/explore-section1.jpg" alt="Shut" class="img-fluid mb-3 rounded-circle">
+        <div class="col-md-2">
+          <img src="img/photo.jpg" alt="Shut" class="img-fluid mb-3 rounded-circle">
         </div>
-        <div class="col-md-6 ">
+        <div class="col-md-10 ">
           <div class="">
-            <h3>Explore and Connect</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos tenetur a distinctio suscipit quis laudantium voluptate beatae placeat asperiores porro.</p>
+            <h3>Chawanwit Karoonyavanich (or just Buddy)</h3>
+            <p>I develop applications.</p>
             <div class="d-flex">
               <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+                <i class="fas fa-check fa-2x"></i>
                 <i class="fas fa-check fa-2x"></i>
               </div>
               <div class="p-4 align-self-start">
