--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <i class="far fa-file-pdf fa-4x "></i> 
                   </div>
                 </div>
-                Download Resume</a>
+                <b>Download Resume</b></a>
               <div class="">
               </div> 
             </div>
@@ -116,8 +116,8 @@
    <section id="create-head-section" class = " bg-dark text-light">
     <div class="container ">
       <div class="row">
-        <div class="col text-center pt-2">
-          <h1 class="display-4 py-1">Portfolio</h1>
+        <div class="col text-center pt-5">
+          <h1 class="display-4 pt-5">Portfolio</h1>
           <p class="lead">
             Some of the bigger projects I worked on in the past!  
           </p> 
@@ -132,24 +132,53 @@
       <div class="row text-center ">    
         <!--Keepr-->
         <div class="col text-center ml-5" > 
-        <div class="card m-3" style="width: 20rem;">
-          <img class="card-img-top" src="img/keepr.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Keepr</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Git Repository</a>
+          <div class="card m-3"  >
+            <img class="card-img-top" src="img/keepr.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Keepr</h5>
+              <p class="card-text">Built an item logging application for android phones, where the user takes pictures of items around their house to digitally organize and find items when needed. </p>
+              <lead> Group members (excluding me):</lead>
+              <ul class="list-group list-group-flush">
+                <a href="https://github.com/asilmian" target = "_blank"><li class="list-group-item">Asil Mian <i class="fab fa-github fa-1x "></i></li></a>
+                <a href="https://github.com/grubburg" target = "_blank"><li class="list-group-item">John Stepherson <i class="fab fa-github fa-1x "></i> </li></a>
+                <a href="https://github.com/grubburg" target = "_blank"><li class="list-group-item">Lachlie Piper <i class="fab fa-github fa-1x "></i></li></a>
+              </ul>
+              <div class="card-body"> 
+              </div>
+              <lead> <b>Techstack: </b></lead> 
+              <pre></pre>
+              <img src="img/flask.png" alt="" style = "width:50px"> 
+              <img src="img/android_studio.png" alt="" style = "width:50px"> 
+              <img src="img/tensorflow.png" alt="" style = "width:70px"> 
+              <div class="card-body"> 
+              </div>
+              <a href="https://github.com/grubburg/it_proj_backend" target = "_blank" class="btn btn-dark">Backend Repo</a>
+              <a href="https://github.com/asilmian/It_proj_android" target = "_blank" class="btn btn-dark">Frontend Repo</a>
+            </div>
           </div>
         </div>
-        </div>
         
+        <!--Attack of the Pac-->
         <div class="col text-center ml-5" > 
-        <div class="card m-3 " style="width: 20rem;">
+        <div class="card m-3 "  >
           <img class="card-img-top img-fluid mb-3 rounded-circle" src="img/pac.PNG " alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Attack of the Pac</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Git</a>
-            <a href="#" class="btn btn-primary">Youtube Video</a>
+            <lead> Group members (excluding me):</lead>
+            <ul class="list-group list-group-flush">
+              <a href="https://github.com/jdulfer" target = "_blank"><li class="list-group-item">James Dulfer <i class="fab fa-github fa-1x "></i></li></a>
+              <a href="https://github.com/AdamSchlicht" target = "_blank"><li class="list-group-item">Adam Schlicht <i class="fab fa-github fa-1x "></i> </li> </a>
+              </ul>
+              <div class="card-body"> 
+              </div>
+              <lead> <b>Techstack: </b></lead> 
+              <pre></pre>
+              <img src="img/unity.jpg" alt="" style = "width:50px">   
+              <img src="img/maya.png" alt="" style = "width:50px">   
+              <div class="card-body"> 
+              </div>
+              <a href="https://github.com/asilmian/It_proj_android" target = "_blank" class="btn btn-dark w-100">Git Repository</a> 
           </div>
         </div> 
         </div>
