Hover color change

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
               <img src="img/tensorflow.png" alt="" style = "width:70px"> 
               <div class="card-body"> 
               </div>
-              <a href="https://github.com/grubburg/it_proj_backend" target = "_blank" class="btn btn-dark">Backend Repo</a>
-              <a href="https://github.com/asilmian/It_proj_android" target = "_blank" class="btn btn-dark">Frontend Repo</a>
+              <a href="https://github.com/grubburg/it_proj_backend" target = "_blank" class="btn btn-dark w-100 my-2">Backend Repo</a>
+              <a href="https://github.com/asilmian/It_proj_android" target = "_blank" class="btn btn-dark w-100">Frontend Repo</a>
             </div>
           </div>
         </div>
