--- a/index.html
+++ b/index.html
@@ -15,31 +15,10 @@
 </head>
 
 <body data-spy = "scroll" data-target=".main-nav" id="home">
-  <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top main-nav" >
-    <div class="container">
-        <a href="#home" class="navbar-brand">
-          <img src="img/logo.png" alt="Shut" class="img-fluid" style = "max-width: 40px;"></a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target = "#navbarCollapse">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id = "navbarCollapse">
-          <ul class="navbar-nav ml-auto">  
-          <li class="nav-item">
-            <a href="#explore-head-section" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#create-head-section" class="nav-link">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a href="#share-head-section" class="nav-link">Links</a>
-          </li>
-        </ul>
-        </div>
-    </div>
-  </nav>
+
  
   <!--Explore Head-->
-  <section class = "background-gif" id = "home" style = "height:55rem">
+  <section class = "background-gif" id = "home" style = "height:49rem">
       <div class="container">
         
       </div>
@@ -55,7 +34,29 @@
       <a href="#explore-head-section" class="btn btn-outline-secondary">Find out more</a>
     </div>
   </div>
-</section>
+</section> 
+ <nav class="navbar navbar-expand-sm bg-light navbar-light  main-nav" id = "navbar">
+  <div class="container">
+      <a href="#home" class="navbar-brand">
+        <img src="img/logo.png" alt="Shut" class="img-fluid" style = "max-width: 40px;"></a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target = "#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id = "navbarCollapse">
+        <ul class="navbar-nav ml-auto">  
+        <li class="nav-item">
+          <a href="#explore-head-section" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#create-head-section" class="nav-link">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a href="#share-head-section" class="nav-link">Links</a>
+        </li>
+      </ul>
+      </div>
+  </div>
+</nav>
   <!--Explore Section-->
   <section id="explore-head-section" class = "bg-dark text-light pt-5">
     <div class="container py-5">
@@ -215,7 +216,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
-
+  <script src = "app.js"></script>
   <script> 
     //Init Scroll Spy
     $('body').scrollspy({target:'.main-nav'});
