--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
  
   <!--Explore Head-->
-  <section class = "background-gif" id = "home" style = "height:49rem">
+  <section class = "background-gif" id = "home" style = "height:55rem">
       <div class="container">
         
       </div>
@@ -31,7 +31,7 @@
     <div class="col text-center py-5 my-5 main-nav" > 
       <h1 class="display-4">Hello! I am Buddy,</h1>
       <p class="lead">and I like to write programs.</p>
-      <a href="#explore-head-section" class="btn btn-outline-secondary">Find out more</a>
+      <a href="#explore-head-section" class="btn btn-outline-secondary ">Find out more</a>
     </div>
   </div>
 </section> 
@@ -60,8 +60,8 @@
   <!--Explore Section-->
   <section id="explore-head-section" class = "bg-dark text-light pt-5">
     <div class="container py-5">
-      <div class="row">
-        <div class="col-md-6">
+      <div class="row py-5">
+        <div class="col-md-6 ">
           <img src="img/photo.jpg" alt="Shut" class="img-fluid mb-3 rounded-circle">
         </div>
         <div class="col-md-6 ">
@@ -229,7 +229,7 @@
 
         $('html, body').animate({
           scrollTop: $(hash).offset().top
-        }, 300, function () {
+        }, 1000, function () {
           window.location.hash = hash
         });
       }
