--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
               <div class="card-body"> 
               </div>
               <a href="https://github.com/grubburg/it_proj_backend" target = "_blank" class="btn btn-dark w-100 my-2">Backend Repo</a>
-              <a href="https://github.com/asilmian/It_proj_android" target = "_blank" class="btn btn-dark w-100">Frontend Repo</a>
+              <a href="https://github.com/asilmian/It_proj_android" target = "_blank" class="btn btn-dark w-100 mb-2">Frontend Repo</a>              
+              <a href="https://airtable.com/invite/l?inviteId=invGvUVUP7o3yM8ZA&inviteToken=b329b6caf0135b5b227213c2e8dd4f8e58e80db9e0b7a4f3056fe90f387e78f4" target = "_blank" class="btn btn-dark w-100 ">Project Management</a>
             </div>
           </div>
         </div>
