--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
   <div class="row" >
     <div class="col text-center py-5 my-5 main-nav" > 
-      <h1 class="display-4">Hello! I am Buddy,</h1>
+      <h1 class="display-4">Hi there! I am Buddy,</h1>
       <p class="lead">and I like to write programs.</p>
       <a href="#explore-head-section" class="btn btn-outline-secondary ">Find out more</a>
     </div>
